force-app/main/default/objects/RELEASE_D__c/RELEASE_D__c.object-meta.xml
<CustomObject>
    <label>출고내역상세</label>
    <nameField>
        <label>상품명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>