force-app/main/default/objects/RELEASE_D__c/fields/CHARG__c.field-meta.xml
<CustomField>
    <fullName>CHARG__c</fullName>
    <label>배치번호</label>
    <length>10</length>
    <type>Text</type>
</CustomField>