force-app/main/default/objects/RELEASE_D__c/fields/EBELN__c.field-meta.xml
<CustomField>
    <fullName>EBELN__c</fullName>
    <label>이체오더번호</label>
    <length>10</length>
    <type>Text</type>
</CustomField>