force-app/main/default/objects/RELEASE_D__c/fields/EBELP__c.field-meta.xml
<CustomField>
    <fullName>EBELP__c</fullName>
    <label>이체오더품목</label>
    <length>5</length>
    <type>Text</type>
</CustomField>