force-app/main/default/objects/RELEASE_D__c/fields/IFDATE__c.field-meta.xml
<CustomField>
    <fullName>IFDATE__c</fullName>
    <label>전송일</label>
    <type>Date</type>
</CustomField>