force-app/main/default/objects/RELEASE_D__c/fields/LGORT__c.field-meta.xml
<CustomField>
    <fullName>LGORT__c</fullName>
    <label>저장위치</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LGORT</valueSetName>
    </valueSet>
</CustomField>