force-app/main/default/objects/RELEASE_D__c/fields/MATNR__c.field-meta.xml
<CustomField>
    <fullName>MATNR__c</fullName>
    <label>자재 번호</label>
    <length>18</length>
    <type>Text</type>
</CustomField>