force-app/main/default/objects/RELEASE_D__c/fields/MENGE__c.field-meta.xml
<CustomField>
    <fullName>MENGE__c</fullName>
    <label>구매 오더 수량</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>