force-app/main/default/objects/RELEASE_D__c/fields/PBUDAT__c.field-meta.xml
<CustomField>
    <fullName>PBUDAT__c</fullName>
    <label>생산일자</label>
    <type>Date</type>
</CustomField>