force-app/main/default/objects/RELEASE_D__c/fields/PSMNG__c.field-meta.xml
<CustomField>
    <fullName>PSMNG__c</fullName>
    <label>생산수량</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>