force-app/main/default/objects/RELEASE_D__c/fields/R_PSMNG__c.field-meta.xml
<CustomField>
    <fullName>R_PSMNG__c</fullName>
    <label>출고제한수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>