force-app/main/default/objects/RELEASE_D__c/fields/RAUBE__c.field-meta.xml
<CustomField>
    <fullName>RAUBE__c</fullName>
    <label>저장조건</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RAUBE</valueSetName>
    </valueSet>
</CustomField>