force-app/main/default/objects/RELEASE_D__c/fields/RELEASE_H__c.field-meta.xml
<CustomField>
    <fullName>RELEASE_H__c</fullName>
    <label>출고내역</label>
    <referenceTo>RELEASE_H__c</referenceTo>
    <relationshipLabel>출고내역상세</relationshipLabel>
    <relationshipName>RELEASE_D</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>