force-app/main/default/objects/RELEASE_D__c/fields/RELEASEDKEY__c.field-meta.xml
<CustomField>
    <fullName>RELEASEDKEY__c</fullName>
    <externalId>true</externalId>
    <label>ckwms키</label>
    <length>50</length>
    <type>Text</type>
</CustomField>