force-app/main/default/objects/RELEASE_D__c/fields/xstat__c.field-meta.xml
<CustomField>
    <fullName>xstat__c</fullName>
    <label>xstat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>