force-app/main/default/objects/RELEASE_D__c/fields/ZTIMS__c.field-meta.xml
<CustomField>
    <fullName>ZTIMS__c</fullName>
    <label>TIME STAMP</label>
    <type>Date</type>
</CustomField>