force-app/main/default/objects/RELEASE_D__c/validationRules/ProhibitConfirmReleaseChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ProhibitConfirmReleaseChange</fullName>
    <active>true</active>
    <description>출고확정 후 변경방지</description>
    <errorConditionFormula>AND (
  ISPICKVAL(RELEASE_H__r.CONFIRM__c, &quot;Y&quot;),
  ISCHANGED(MENGE__c)
)</errorConditionFormula>
    <errorDisplayField>PSMNG__c</errorDisplayField>
    <errorMessage>확정된 출고내역은 변경할 수 없습니다.</errorMessage>
</ValidationRule>